# blackjack-basic-strategy

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pages.yml
cuda/: .gitignore  Makefile  README.md  monte_carlo.cu
docs/: algorithm.md  configuration.md  house_edge_calculation.md  monte-carlo.md  strategy-calculation.md  usage.md  web-app.md
scripts/: generate_strategies.py  run_mc_batch.py
src/blackjack/: __init__.py  cards.py  config.py  dealer.py  evaluator.py  house_edge.py  renderers.py  strategy.py  tables.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/public/: robots.txt  sitemap.xml
web/public/strategies/: mc_house_edge.json
web/src/: App.svelte  app.css
web/src/lib/components/: ConfigPanel.svelte  Legend.svelte  StrategyTable.svelte  TableCell.svelte
web/src/lib/stores/: config.ts  mcHouseEdge.ts
web/src/lib/types/: strategy.ts
web/src/lib/utils/: colors.ts
